--- a/src/common/design.css
+++ b/src/common/design.css
@@ -12,6 +12,7 @@
   background-repeat: no-repeat;
   justify-content: center;
   min-height: 100vh;
+  padding: 20px;
 }
 
 .design__content {
@@ -20,6 +21,7 @@
   border-radius: 50px;
   background-color: #fff;
   display: flex;
+  flex-direction: row;
 }
 
 .design__logo-section {
@@ -40,7 +42,6 @@
 .design__intro-text {
   color: #f9e2ba;
   font-size: 39px;
-
   line-height: 45px;
   max-width: 350px;
 }
@@ -57,7 +58,6 @@
 .design__heading {
   color: #232323;
   font-size: 34px;
-
   line-height: 42px;
   max-width: 421px;
 }
@@ -123,4 +123,101 @@
   color: #19b07e;
   text-decoration: underline;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .design__content {
+    width: 90%;
+    height: auto;
+    flex-direction: column;
+    border-radius: 30px;
+  }
+
+  .design__logo-section {
+    padding: 20px;
+    border-radius: 30px 30px 0 0;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .design__intro-text {
+    font-size: 32px;
+    line-height: 40px;
+    max-width: 100%;
+    text-align: center;
+  }
+
+  .design__form-section {
+    padding: 30px;
+    gap: 40px;
+  }
+
+  .design__heading {
+    font-size: 28px;
+    text-align: center;
+    max-width: unset;
+  }
+
+  .design__signup-btn {
+    width: 500px;
+    justify-content: center;
+    margin: auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .design__content {
+    width: 100%;
+    height: auto;
+    flex-direction: column;
+    padding: 20px;
+    border-radius: 20px;
+  }
+
+  .design__logo-section {
+    padding: 15px;
+    border-radius: 20px 20px 0 0;
+    justify-content: center;
+  }
+
+  .design__intro-text {
+    font-size: 24px;
+    line-height: 30px;
+    text-align: center;
+    max-width: 100%;
+    display: none;
+  }
+
+  .design__form-section {
+    padding: 20px;
+    gap: 30px;
+  }
+
+  .design__heading {
+    font-size: 24px;
+    text-align: center;
+  }
+
+  .design__inputs {
+    gap: 10px;
+  }
+
+  .design__input-label {
+    font-size: 14px;
+  }
+
+  .design__signup-btn {
+    width: 100%;
+    padding: 2px;
+  }
+
+  .design__signup-text {
+    font-size: 18px;
+  }
+
+  .design__terms,
+  .design__login {
+    font-size: 12px;
+    text-align: center;
+  }
 }
